syntax = "proto3";

package hello;

enum OrderType {
    ORDER_TYPE_NONE = 0;
    ORDER_TYPE_TACO = 1;
    ORDER_TYPE_BURRITO = 2;
}

message Order {
    OrderType type = 1;
}

message OrderRequest {
    Order order = 1;
}

message OrderResponse {
    string message = 1;
}

service TacoTruck {
    rpc Order(OrderRequest) returns (OrderResponse) {}
}
